Update BACANI - Comida a Domicilio.html

--- a/BACANI - Comida a Domicilio.html
+++ b/BACANI - Comida a Domicilio.html
@@ -110,7 +110,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#inicio" title="Descubre nuestra deliciosa oferta de inicio">Inicio</a></li>
+        <li><a href="C:\Users\estre\OneDrive\proyectofinal\BACANI - Comida a Domicilio.html" title="Descubre nuestra deliciosa oferta de inicio">Inicio</a></li>
         <li><a href="C:%5CUsers%5Cestre%5COneDrive%5Cproyectofinal%5CMENU.html"
 
             title="Explora nuestro variado menú">Menú</a></li>
